Notebooks test run

--- a/notebooks/Analyses/Histogram.ipynb
+++ b/notebooks/Analyses/Histogram.ipynb
@@ -92,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.83.2\n"
+      "diive version: v0.85.0\n"
      ]
     }
    ],
@@ -179,27 +179,7 @@
        "      <th>CO2_NR</th>\n",
        "      <th>H2O_NR</th>\n",
        "      <th>CH4_NR</th>\n",
-       "      <th>NONE_NR</th>\n",
-       "      <th>TAU_NR</th>\n",
-       "      <th>H_NR</th>\n",
-       "      <th>FC_NR</th>\n",
-       "      <th>LE_NR</th>\n",
-       "      <th>FCH4_NR</th>\n",
-       "      <th>FNONE_NR</th>\n",
-       "      <th>TAU</th>\n",
-       "      <th>H</th>\n",
-       "      <th>LE</th>\n",
        "      <th>...</th>\n",
-       "      <th>BADM_INSTPAIR_EASTWARD_SEP_GA_NONE</th>\n",
-       "      <th>BADM_INSTPAIR_HEIGHT_SEP_GA_NONE</th>\n",
-       "      <th>BADM_INST_GA_CP_TUBE_LENGTH_GA_NONE</th>\n",
-       "      <th>BADM_INST_GA_CP_TUBE_IN_DIAM_GA_NONE</th>\n",
-       "      <th>BADM_INST_GA_CP_TUBE_FLOW_RATE_GA_NONE</th>\n",
-       "      <th>HPATH_GA_NONE</th>\n",
-       "      <th>VPATH_GA_NONE</th>\n",
-       "      <th>RESPONSE_TIME_GA_NONE</th>\n",
-       "      <th>NUM_CUSTOM_VARS</th>\n",
-       "      <th>CUSTOM_DATA_SIZE_IRGA72_MEAN</th>\n",
        "      <th>CUSTOM_STATUS_CODE_IRGA72_MEAN</th>\n",
        "      <th>CUSTOM_GA_DIAG_CODE_IRGA72_MEAN</th>\n",
        "      <th>CUSTOM_SIGNAL_STRENGTH_IRGA72_MEAN</th>\n",
@@ -218,26 +198,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TIMESTAMP_MIDDLE</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -289,27 +249,7 @@
        "      <td>35988.0</td>\n",
        "      <td>35988.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>36000.0</td>\n",
-       "      <td>36000.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.012152</td>\n",
-       "      <td>-4.93653</td>\n",
-       "      <td>6.698080</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>26.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>8191.0</td>\n",
        "      <td>100.05</td>\n",
@@ -343,27 +283,7 @@
        "      <td>35988.0</td>\n",
        "      <td>35988.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>36000.0</td>\n",
-       "      <td>36000.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.017730</td>\n",
-       "      <td>4.44042</td>\n",
-       "      <td>-0.171644</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>26.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>8191.0</td>\n",
        "      <td>100.05</td>\n",
@@ -397,27 +317,7 @@
        "      <td>35988.0</td>\n",
        "      <td>35988.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>36000.0</td>\n",
-       "      <td>36000.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.034328</td>\n",
-       "      <td>3.49120</td>\n",
-       "      <td>-1.036880</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>26.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>8191.0</td>\n",
        "      <td>100.05</td>\n",
@@ -451,27 +351,7 @@
        "      <td>35988.0</td>\n",
        "      <td>35988.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>36000.0</td>\n",
-       "      <td>36000.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.018509</td>\n",
-       "      <td>4.38549</td>\n",
-       "      <td>-0.313793</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>26.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>8191.0</td>\n",
        "      <td>100.05</td>\n",
@@ -505,27 +385,7 @@
        "      <td>35988.0</td>\n",
        "      <td>35988.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>36000.0</td>\n",
-       "      <td>36000.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>35988.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.022376</td>\n",
-       "      <td>4.95141</td>\n",
-       "      <td>1.616020</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>26.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>8191.0</td>\n",
        "      <td>100.05</td>\n",
@@ -548,13 +408,13 @@
        "</div>"
       ],
       "text/plain": [
-       "                     TIMESTAMP_START  DOY_START  DOY_END  FILENAME_HF  SW_IN_POT  NIGHT  EXPECT_NR  FILE_NR  CUSTOM_FILTER_NR  WD_FILTER_NR  SONIC_NR  T_SONIC_NR   CO2_NR   H2O_NR  CH4_NR  NONE_NR   TAU_NR     H_NR    FC_NR    LE_NR  FCH4_NR  FNONE_NR       TAU        H        LE  ...  BADM_INSTPAIR_EASTWARD_SEP_GA_NONE  BADM_INSTPAIR_HEIGHT_SEP_GA_NONE  BADM_INST_GA_CP_TUBE_LENGTH_GA_NONE  BADM_INST_GA_CP_TUBE_IN_DIAM_GA_NONE  BADM_INST_GA_CP_TUBE_FLOW_RATE_GA_NONE  HPATH_GA_NONE  VPATH_GA_NONE  RESPONSE_TIME_GA_NONE  NUM_CUSTOM_VARS  CUSTOM_DATA_SIZE_IRGA72_MEAN  CUSTOM_STATUS_CODE_IRGA72_MEAN  CUSTOM_GA_DIAG_CODE_IRGA72_MEAN  CUSTOM_SIGNAL_STRENGTH_IRGA72_MEAN  CUSTOM_H2O_MEAN  CUSTOM_CO2_MEAN  CUSTOM_AIR_P_MEAN  CUSTOM_COOLER_V_MEAN  CUSTOM_FLOWRATE_MEAN  NUM_BIOMET_VARS  LW_IN_1_1_1  PA_1_1_1  PPFD_IN_1_1_1  RH_1_1_1  SW_IN_1_1_1  TA_1_1_1\n",
-       "TIMESTAMP_MIDDLE                                                                                                                                                                                                                                                                          ...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           \n",
-       "2021-07-01 00:15:00     2.021070e+11    182.000  182.021          NaN        0.0    1.0    36000.0  36000.0           36000.0       36000.0   36000.0     36000.0  35988.0  35988.0     NaN      NaN  36000.0  36000.0  35988.0  35988.0      NaN       NaN -0.012152 -4.93653  6.698080  ...                                 NaN                               NaN                                  NaN                                   NaN                                     NaN            NaN            NaN                    NaN              9.0                          26.0                             0.0                           8191.0                              100.05          340.582          14.2538            80198.2               1.91066              0.000259              6.0      329.076   80.1982            0.0  100.0000          0.0   5.55880\n",
-       "2021-07-01 00:45:00     2.021070e+11    182.021  182.042          NaN        0.0    1.0    36000.0  36000.0           36000.0       36000.0   36000.0     36000.0  35988.0  35988.0     NaN      NaN  36000.0  36000.0  35988.0  35988.0      NaN       NaN -0.017730  4.44042 -0.171644  ...                                 NaN                               NaN                                  NaN                                   NaN                                     NaN            NaN            NaN                    NaN              9.0                          26.0                             0.0                           8191.0                              100.05          344.452          14.1511            80203.3               1.91007              0.000259              6.0      340.771   80.2033            0.0  100.0000          0.0   5.59079\n",
-       "2021-07-01 01:15:00     2.021070e+11    182.042  182.062          NaN        0.0    1.0    36000.0  36000.0           36000.0       36000.0   36000.0     36000.0  35988.0  35988.0     NaN      NaN  36000.0  36000.0  35988.0  35988.0      NaN       NaN -0.034328  3.49120 -1.036880  ...                                 NaN                               NaN                                  NaN                                   NaN                                     NaN            NaN            NaN                    NaN              9.0                          26.0                             0.0                           8191.0                              100.05          343.712          14.1364            80210.6               1.90857              0.000259              6.0      341.942   80.2106            0.0   99.8620          0.0   5.58350\n",
-       "2021-07-01 01:45:00     2.021070e+11    182.062  182.083          NaN        0.0    1.0    36000.0  36000.0           36000.0       36000.0   36000.0     36000.0  35988.0  35988.0     NaN      NaN  36000.0  36000.0  35988.0  35988.0      NaN       NaN -0.018509  4.38549 -0.313793  ...                                 NaN                               NaN                                  NaN                                   NaN                                     NaN            NaN            NaN                    NaN              9.0                          26.0                             0.0                           8191.0                              100.05          342.139          14.1158            80206.5               1.90679              0.000259              6.0      349.003   80.2064            0.0   99.3662          0.0   5.55140\n",
-       "2021-07-01 02:15:00     2.021070e+11    182.083  182.104          NaN        0.0    1.0    36000.0  36000.0           36000.0       36000.0   36000.0     36000.0  35988.0  35988.0     NaN      NaN  36000.0  36000.0  35988.0  35988.0      NaN       NaN -0.022376  4.95141  1.616020  ...                                 NaN                               NaN                                  NaN                                   NaN                                     NaN            NaN            NaN                    NaN              9.0                          26.0                             0.0                           8191.0                              100.05          343.733          14.1260            80192.1               1.90773              0.000259              6.0      346.874   80.1922            0.0   99.9380          0.0   5.59066\n",
+       "                     TIMESTAMP_START  DOY_START  DOY_END  FILENAME_HF  SW_IN_POT  NIGHT  EXPECT_NR  FILE_NR  CUSTOM_FILTER_NR  WD_FILTER_NR  SONIC_NR  T_SONIC_NR   CO2_NR   H2O_NR  CH4_NR  ...  CUSTOM_STATUS_CODE_IRGA72_MEAN  CUSTOM_GA_DIAG_CODE_IRGA72_MEAN  CUSTOM_SIGNAL_STRENGTH_IRGA72_MEAN  CUSTOM_H2O_MEAN  CUSTOM_CO2_MEAN  CUSTOM_AIR_P_MEAN  CUSTOM_COOLER_V_MEAN  CUSTOM_FLOWRATE_MEAN  NUM_BIOMET_VARS  LW_IN_1_1_1  PA_1_1_1  PPFD_IN_1_1_1  RH_1_1_1  SW_IN_1_1_1  TA_1_1_1\n",
+       "TIMESTAMP_MIDDLE                                                                                                                                                                             ...                                                                                                                                                                                                                                                                                              \n",
+       "2021-07-01 00:15:00     2.021070e+11    182.000  182.021          NaN        0.0    1.0    36000.0  36000.0           36000.0       36000.0   36000.0     36000.0  35988.0  35988.0     NaN  ...                             0.0                           8191.0                              100.05          340.582          14.2538            80198.2               1.91066              0.000259              6.0      329.076   80.1982            0.0  100.0000          0.0   5.55880\n",
+       "2021-07-01 00:45:00     2.021070e+11    182.021  182.042          NaN        0.0    1.0    36000.0  36000.0           36000.0       36000.0   36000.0     36000.0  35988.0  35988.0     NaN  ...                             0.0                           8191.0                              100.05          344.452          14.1511            80203.3               1.91007              0.000259              6.0      340.771   80.2033            0.0  100.0000          0.0   5.59079\n",
+       "2021-07-01 01:15:00     2.021070e+11    182.042  182.062          NaN        0.0    1.0    36000.0  36000.0           36000.0       36000.0   36000.0     36000.0  35988.0  35988.0     NaN  ...                             0.0                           8191.0                              100.05          343.712          14.1364            80210.6               1.90857              0.000259              6.0      341.942   80.2106            0.0   99.8620          0.0   5.58350\n",
+       "2021-07-01 01:45:00     2.021070e+11    182.062  182.083          NaN        0.0    1.0    36000.0  36000.0           36000.0       36000.0   36000.0     36000.0  35988.0  35988.0     NaN  ...                             0.0                           8191.0                              100.05          342.139          14.1158            80206.5               1.90679              0.000259              6.0      349.003   80.2064            0.0   99.3662          0.0   5.55140\n",
+       "2021-07-01 02:15:00     2.021070e+11    182.083  182.104          NaN        0.0    1.0    36000.0  36000.0           36000.0       36000.0   36000.0     36000.0  35988.0  35988.0     NaN  ...                             0.0                           8191.0                              100.05          343.733          14.1260            80192.1               1.90773              0.000259              6.0      346.874   80.1922            0.0   99.9380          0.0   5.59066\n",
        "\n",
        "[5 rows x 488 columns]"
       ]
@@ -1523,7 +1383,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-10-24 13:39:56\n"
+      "Finished 2025-01-23 12:40:58\n"
      ]
     }
    ],
