--- a/notebooks/Analyses/GapFinder.ipynb
+++ b/notebooks/Analyses/GapFinder.ipynb
@@ -86,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.83.2\n"
+      "diive version: v0.85.0\n"
      ]
     }
    ],
@@ -166,7 +166,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.063 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.042 seconds).\n",
+      "    --> Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     },
     {
@@ -479,7 +480,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-10-24 13:40:17\n"
+      "Finished 2025-01-23 12:40:55\n"
      ]
     }
    ],
