Notebooks test run 3

--- a/notebooks/GapFilling/FluxMDSGapFilling.ipynb
+++ b/notebooks/GapFilling/FluxMDSGapFilling.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Notebook version**: `1.1` (25 Nov 2024)  \n",
+    "**Notebook version**: `1.2` (23 Jan 2025)  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  "
    ]
   },
@@ -53,11 +53,14 @@
     "tags": []
    },
    "source": [
-    "- This is the current default gap-filling method for eddy covariance ecosystem fluxes and is described in [Reichstein et al., 2005](https://onlinelibrary.wiley.com/doi/10.1111/j.1365-2486.2005.001002.x), see also [Pastorello et al., 2020](https://www.nature.com/articles/s41597-020-0534-3).\n",
+    "- This is the current default gap-filling method for eddy covariance ecosystem fluxes and was implemented following the descriptions in [Reichstein et al., 2005](https://onlinelibrary.wiley.com/doi/10.1111/j.1365-2486.2005.001002.x), see also [Pastorello et al., 2020](https://www.nature.com/articles/s41597-020-0534-3).\n",
     "- `MDS` stands for `marginal distribution sampling`. The method uses a time window to first identify meteorological\n",
     "conditions (short-wave incoming radiation, air temperature and VPD) similar to those when the missing data\n",
     "occurred.\n",
-    "- Gaps are then filled with the mean flux in the time window. "
+    "- Gaps are then filled with the mean flux in the time window.\n",
+    "\n",
+    "**Note**:\n",
+    "- Results should be similar to other implementations such as [REddyProc](https://github.com/EarthyScience/REddyProc) and [ONEFlux](https://github.com/fluxnet/ONEFlux), but from my testing all packages output (mostly slightly) different numbers after gap-filling"
    ]
   },
   {
@@ -231,7 +234,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.038 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.153 seconds).\n",
+      "    --> Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     }
    ],
@@ -672,14 +676,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gap-filling quality 1 ...\n",
-      "Gap-filling quality 2 ...\n",
-      "Gap-filling quality 3 ...\n",
-      "Gap-filling quality 4 ...\n",
-      "Gap-filling quality 5 ...\n",
-      "Gap-filling quality 6 ...\n",
-      "Gap-filling quality 7 ...\n",
-      "Gap-filling quality 8 ...\n",
+      "\n",
+      "MDS gap-filling quality 1 ...\n",
+      "\n",
+      "MDS gap-filling quality 2 ...\n",
+      "MDS gap-filling quality 3 ...\n",
+      "MDS gap-filling quality 4 ...\n",
+      "MDS gap-filling quality 5 ...\n",
+      "\n",
+      "MDS gap-filling quality 6 ...\n",
+      "\n",
+      "MDS gap-filling quality 7 ...\n",
+      "MDS gap-filling quality 8 ...\n",
       "MDS gap-filling done.\n"
      ]
     }
@@ -1403,14 +1411,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gap-filling quality 1 ...\n",
-      "Gap-filling quality 2 ...\n",
-      "Gap-filling quality 3 ...\n",
-      "Gap-filling quality 4 ...\n",
-      "Gap-filling quality 5 ...\n",
-      "Gap-filling quality 6 ...\n",
-      "Gap-filling quality 7 ...\n",
-      "Gap-filling quality 8 ...\n",
+      "\n",
+      "MDS gap-filling quality 1 ...\n",
+      "\n",
+      "MDS gap-filling quality 2 ...\n",
+      "MDS gap-filling quality 3 ...\n",
+      "MDS gap-filling quality 4 ...\n",
+      "MDS gap-filling quality 5 ...\n",
+      "\n",
+      "MDS gap-filling quality 6 ...\n",
+      "\n",
+      "MDS gap-filling quality 7 ...\n",
+      "MDS gap-filling quality 8 ...\n",
       "MDS gap-filling done.\n"
      ]
     }
@@ -2083,7 +2095,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished. 2024-11-25 22:10:47\n"
+      "Finished. 2025-01-23 16:38:44\n"
      ]
     }
    ],
