--- a/notebooks/GapFilling/QuickRandomForestGapFilling.ipynb
+++ b/notebooks/GapFilling/QuickRandomForestGapFilling.ipynb
@@ -128,8 +128,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This page was last modified on: 2024-10-24 17:32:58\n",
-      "diive version: v0.83.2\n"
+      "This page was last modified on: 2025-01-23 22:23:06\n",
+      "diive version: v0.85.0\n"
      ]
     }
    ],
@@ -226,7 +226,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.059 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.057 seconds).\n",
+      "    --> Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     }
    ],
@@ -605,6 +606,13 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "\n",
+      "============================================================\n",
+      "Starting gap-filling for\n",
+      "NEE_CUT_REF_orig\n",
+      "using <class 'sklearn.ensemble._forest.RandomForestRegressor'>\n",
+      "============================================================\n",
+      "\n",
       "Adding new data columns ...\n",
       "++ Added new columns with lagged variants for: ['Tair_f', 'VPD_f', 'Rg_f'] (lags between -1 and -1 with stepsize 1), no lagged variants for: ['NEE_CUT_REF_orig']. Shifting the time series created gaps which were then filled with the nearest value.\n",
       "++ Added new columns with timestamp info: ['.YEAR', '.SEASON', '.MONTH', '.WEEK', '.DOY', '.HOUR', '.YEARMONTH', '.YEARDOY', '.YEARWEEK'] \n",
@@ -713,7 +721,7 @@
       "\n",
       "## MODEL SCORES\n",
       "- MAE:  1.6350482523358312 (mean absolute error)\n",
-      "- MedAE:  1.1171385218314223 (median absolute error)\n",
+      "- MedAE:  1.1171385218314218 (median absolute error)\n",
       "- MSE:  5.683859611150842 (mean squared error)\n",
       "- RMSE:  2.3840846484868865 (root mean squared error)\n",
       "- MAXE:  32.604177343000956 (max error)\n",
@@ -831,7 +839,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished. 2024-10-24 17:34:11\n"
+      "Finished. 2025-01-23 22:23:25\n"
      ]
     }
    ],
