--- a/notebooks/GapFilling/XGBoostGapFillingExtensive.ipynb
+++ b/notebooks/GapFilling/XGBoostGapFillingExtensive.ipynb
@@ -126,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.83.2\n"
+      "diive version: v0.85.0\n"
      ]
     }
    ],
@@ -230,7 +230,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.051 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.040 seconds).\n",
+      "    --> Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     }
    ],
@@ -949,6 +950,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "\n",
+      "============================================================\n",
+      "Starting gap-filling for\n",
+      "NEE_CUT_REF_orig\n",
+      "using <class 'xgboost.sklearn.XGBRegressor'>\n",
+      "============================================================\n",
       "\n",
       "Adding new data columns ...\n",
       "++ Added new columns with lagged variants for: ['Tair_f', 'VPD_f', 'SWC_FF0_0.15_1', 'PPFD'] (lags between -1 and -1 with stepsize 1), no lagged variants for: ['NEE_CUT_REF_orig', 'Rg_f', 'TA>0', 'TA>20', 'DAYTIME', 'NIGHTTIME']. Shifting the time series created gaps which were then filled with the nearest value.\n",
@@ -3542,7 +3550,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished. 2024-10-24 17:39:12\n"
+      "Finished. 2025-01-23 22:21:36\n"
      ]
     }
    ],
