--- a/notebooks/GapFilling/XGBoostGapFillingMinimal.ipynb
+++ b/notebooks/GapFilling/XGBoostGapFillingMinimal.ipynb
@@ -126,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.83.2\n"
+      "diive version: v0.85.0\n"
      ]
     }
    ],
@@ -228,7 +228,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.050 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.086 seconds).\n",
+      "    --> Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     }
    ],
@@ -2489,7 +2490,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished. 2024-10-24 17:39:47\n"
+      "Finished. 2025-01-23 22:20:25\n"
      ]
     }
    ],
