--- a/notebooks/Stats/TimeSeriesStats.ipynb
+++ b/notebooks/Stats/TimeSeriesStats.ipynb
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "diive version: v0.83.2\n"
+      "diive version: v0.85.0\n"
      ]
     }
    ],
@@ -91,7 +91,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.053 seconds). Detected time resolution of <30 * Minutes> / 30min \n"
+      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.048 seconds).\n",
+      "    --> Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     },
     {
@@ -335,7 +336,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2024-10-25 00:20:29\n"
+      "Finished 2025-01-25 01:48:53\n"
      ]
     }
    ],
