Added notebook for lagged variants

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 26 Nov 2024  \n",
+    "**Last updated**: 26 Jan 2025  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -83,7 +83,8 @@
    "source": [
     "- [Calculate VPD from TA and RH](CalculateVariable/Calculate_VPD_from_TA_and_RH.ipynb)\n",
     "- [Calculate daytime flag, nighttime flag and potential radiation from latitude and longitude ](CalculateVariable/Daytime_and_nighttime_flag.ipynb)\n",
-    "- [Calculate time since last occurrence, e.g. since last precipitation](CalculateVariable/TimeSince.ipynb)"
+    "- [Calculate time since last occurrence, e.g. since last precipitation](CalculateVariable/TimeSince.ipynb)\n",
+    "- <b>NEW!</b> [Calculate lagged variants of variables](CalculateVariable/Calculate_lagged_variants.ipynb)"
    ]
   },
   {
@@ -188,7 +189,7 @@
    "id": "e3344d3b-0d72-4915-a84e-45b5eec3c7b6",
    "metadata": {},
    "source": [
-    "- <b>UPDATED!</b>  [Flux Processing Chain, example NEE](FluxProcessingChain/FluxProcessingChain.ipynb): flux quality flag extension (Level-2), storage correction (Level-3.1), outlier removal (Level-3.2)\n",
+    "- [Flux Processing Chain, example NEE](FluxProcessingChain/FluxProcessingChain.ipynb): flux quality flag extension (Level-2), storage correction (Level-3.1), outlier removal (Level-3.2)\n",
     "- [Quick Flux Processing Chain](FluxProcessingChain/QuickFluxProcessingChain.ipynb): quickly run a simplified version of the flux processing chain"
    ]
   },
@@ -216,10 +217,10 @@
    "source": [
     "\n",
     "- [Linear interpolation](GapFilling/LinearInterpolation.ipynb)\n",
-    "- <b>NEW!</b> <b>UPDATED!</b> [MDS gap-filling of ecosystem fluxes](GapFilling/FluxMDSGapFilling.ipynb): approach by [Reichstein et al., 2005](https://onlinelibrary.wiley.com/doi/10.1111/j.1365-2486.2005.001002.x)\n",
+    "- [MDS gap-filling of ecosystem fluxes](GapFilling/FluxMDSGapFilling.ipynb): approach by [Reichstein et al., 2005](https://onlinelibrary.wiley.com/doi/10.1111/j.1365-2486.2005.001002.x)\n",
     "- [Random forest parameter optimization](GapFilling/RandomForestParamOptimization.ipynb)\n",
     "- [Random forest gap-filling](GapFilling/RandomForestGapFilling.ipynb)\n",
-    "- <b>NEW!</b> [Random forest long-term gap-filling](GapFilling/LongTermRandomForestGapFilling.ipynb)\n",
+    "- [Random forest long-term gap-filling](GapFilling/LongTermRandomForestGapFilling.ipynb)\n",
     "- [Random forest quick gap-filling with ](GapFilling/QuickRandomForestGapFilling.ipynb): Quick gap-filling with pre-defined parameters\n",
     "- [XGBoost gap-filling, minimal example](GapFilling/XGBoostGapFillingMinimal.ipynb)\n",
     "- [XGBoost gap-filling, more extensive example](GapFilling/XGBoostGapFillingExtensive.ipynb)"
