--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 26 Jan 2025  \n",
+    "**Last updated**: 24 Feb 2025  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -84,7 +84,7 @@
     "- [Calculate VPD from TA and RH](CalculateVariable/Calculate_VPD_from_TA_and_RH.ipynb)\n",
     "- [Calculate daytime flag, nighttime flag and potential radiation from latitude and longitude ](CalculateVariable/Daytime_and_nighttime_flag.ipynb)\n",
     "- [Calculate time since last occurrence, e.g. since last precipitation](CalculateVariable/TimeSince.ipynb)\n",
-    "- <b>NEW!</b> [Calculate lagged variants of variables](CalculateVariable/Create_lagged_variants.ipynb)"
+    "- [Calculate lagged variants of variables](CalculateVariable/Create_lagged_variants.ipynb)"
    ]
   },
   {
@@ -162,6 +162,7 @@
    "id": "83cfc453-4d16-41e1-a439-d96aaf2013f8",
    "metadata": {},
    "source": [
+    "- <b>NEW!</b> [Format meteo data for flux processing in EddyPro](Formats/FormatMeteoForEddyProFluxProcessing.ipynb)\n",
     "- [Format EddyPro fluxnet output files for upload to FLUXNET database](Formats/FormatEddyProFluxnetFileForUpload.ipynb)\n",
     "- [Load and save Parquet file](Formats/LoadSaveParquetFile.ipynb)"
    ]
