--- a/notebooks/Formats/FormatMeteoForEddyProFluxProcessing.ipynb
+++ b/notebooks/Formats/FormatMeteoForEddyProFluxProcessing.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
     "FIELDS = [TA, RH, SW_IN, LW_IN, PPFD_IN]  # No PA in this example\n",
     "TIMEZONE_OFFSET_TO_UTC_HOURS = 1  # Timezone, e.g. \"1\" is translated to timezone \"UTC+01:00\" (CET, winter time)\n",
     "data_version = \"meteoscreening_diive\"\n",
-    "DIRCONF = r'F:\\Sync\\luhk_work\\20 - CODING\\22 - POET\\configs'"
+    "DIRCONF = r'L:\\Sync\\luhk_work\\20 - CODING\\22 - POET\\configs'"
    ]
   },
   {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-22T13:58:42.635066Z",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-22T13:58:42.698525Z",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "[17405 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "[17568 rows x 7 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,29 +748,6 @@
    "source": [
     "res = f.get_results()\n",
     "res"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "</br>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-22T13:58:42.746400Z",
-     "start_time": "2024-08-22T13:58:42.730412Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "SOURCE = r\"..\\..\\diive\\configs\\exampledata\\EDDYPRO-FLUXNET-CSV-30MIN_multiple\"  # This is the folder where datafiles are searched\n",
-    "OUTDIR = r\"F:\\TMP\"  # Output yearly CSV to this folder"
    ]
   },
   {
@@ -884,13 +861,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "</br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# **Save to CSV**"
    ]
   },
@@ -934,7 +904,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2025-02-24 18:24:42\n"
+      "Finished 2025-02-25 15:30:23\n"
      ]
     }
    ],
