--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 24 Feb 2025  \n",
+    "**Last updated**: 26 Feb 2025  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -163,6 +163,7 @@
    "metadata": {},
    "source": [
     "- <b>NEW!</b> [Format meteo data for flux processing in EddyPro](Formats/FormatMeteoForEddyProFluxProcessing.ipynb)\n",
+    "- <b>NEW!</b> [Format meteo data for flux processing in EddyPro](Formats/FormatMeteoForFluxnetUpload.ipynb)\n",
     "- [Format EddyPro fluxnet output files for upload to FLUXNET database](Formats/FormatEddyProFluxnetFileForUpload.ipynb)\n",
     "- [Load and save Parquet file](Formats/LoadSaveParquetFile.ipynb)"
    ]
