Streamline ridgelineplot usage

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 26 Feb 2025  \n",
+    "**Last updated**: 18 Mar 2025  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -162,8 +162,8 @@
    "id": "83cfc453-4d16-41e1-a439-d96aaf2013f8",
    "metadata": {},
    "source": [
-    "- <b>NEW!</b> [Format meteo data for flux processing in EddyPro](Formats/FormatMeteoForEddyProFluxProcessing.ipynb)\n",
-    "- <b>NEW!</b> [Format meteo data for flux processing in EddyPro](Formats/FormatMeteoForFluxnetUpload.ipynb)\n",
+    "- [Format meteo data for flux processing in EddyPro](Formats/FormatMeteoForEddyProFluxProcessing.ipynb)\n",
+    "- [Format meteo data for flux processing in EddyPro](Formats/FormatMeteoForFluxnetUpload.ipynb)\n",
     "- [Format EddyPro fluxnet output files for upload to FLUXNET database](Formats/FormatEddyProFluxnetFileForUpload.ipynb)\n",
     "- [Load and save Parquet file](Formats/LoadSaveParquetFile.ipynb)"
    ]
@@ -328,6 +328,7 @@
     "- [Heatmap showing values (z) of time series as year (y) vs month (x)](Plotting/HeatmapYearMonth.ipynb)\n",
     "- [Histogram with options to show z-scores, highlight peak distribution, show counts](Plotting/Histogram.ipynb)\n",
     "- [Long-term anomalies per year](Plotting/LongTermAnomalies.ipynb)\n",
+    "- <b><span style=\"color:#F4511E\">NEW!</span></b> [Ridgeline plot](Plotting/ridgelineplot.ipynb)\n",
     "- [Scatter plot with bins](Plotting/ScatterXY.ipynb)\n",
     "- [Simple (interactive) time series plot](Plotting/TimeSeries.ipynb)"
    ]
@@ -462,17 +463,6 @@
    "metadata": {},
    "source": [
     "</br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "92028111-2dc8-4e7e-b7a9-11bdd1990800",
-   "metadata": {},
-   "source": [
-    "# **Workbench**\n",
-    "Use cases\n",
-    "- [ICOS: Compare uploaded to local precipitation data](Workbench/ICOS_precipitation_compare_uploaded_to_local_data.ipynb)\n",
-    "- [Remove unneeded columns](Workbench/Remove_unneeded_cols.ipynb)"
    ]
   },
   {
