Added params to save fpc results to files

--- a/notebooks/GapFilling/LongTermRandomForestGapFilling.ipynb
+++ b/notebooks/GapFilling/LongTermRandomForestGapFilling.ipynb
@@ -53,7 +53,8 @@
     "tags": []
    },
    "source": [
-    "- Using long-term random forest to gap-fill time series data"
+    "- This notebook uses `diive`'s long-term random forest class `LongTermGapFillingRandomForestTS`to gap-fill time series data\n",
+    "- The `long-term` approach involves constructing annual random forest models, where each model is trained using data from the target year and its immediate two neighboring years."
    ]
   },
   {
